Past projects section created and fleshed out with Sandy Faces outline.

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artist Portfolio</title>
+    <title>Wild Light Arts</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1>Artist Portfolio</h1>
+        <h1>Wild Light Arts | Jessica Lee McHenry</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -17,11 +17,13 @@
         <a href="showcase-gallery.html">Showcase Gallery</a>
     </nav>
     <div class="container">
+        <center>
         <h2>Welcome to My Portfolio</h2>
         <p>This is the home page of my artist portfolio. Explore my past and current projects and view my showcase gallery.</p>
+        </center>
     </div>
     <footer class="footer">
-        <p>&copy; 2024 Artist Name. All rights reserved.</p>
+        <p>&copy; 2024 J L McHenry. All rights reserved.</p>
     </footer>
 </body>
 </html>
