--- a/src/sandy-faces.html
+++ b/src/sandy-faces.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Past Projects</h1>
+        <h1>Sandy Faces</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -18,13 +18,8 @@
     </nav>
     <div class="container">
         <center>
-        <h2>Past Projects</h2>
-        <p>Here are some of my past projects:</p>
-        <ul>
-            <li>Sandy Faces | Sandy Beach Community Centre</li>
-            <li>Kaleidoscope | Victorian Government & The Song Room</li>
-            <li>Tunnahan Faces | Independent Project at Tunnahan (Cape Schanck, VIC)</li>
-        </ul>
+        <h2>Sandy Faces - Sandringham Community Centre</h2>
+        <p>Sandy Faces was a self-guided project I collaborated with the Sandringham Community Centre on. Their Young at Heart weekly historical group was collecting personal stories from each of the members for an online platform that would eventually be shared with loved ones.
     </center>
     </div>
     <footer class="footer">
