--- a/src/showcase-gallery.html
+++ b/src/showcase-gallery.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p>&copy; 2024 Artist Name. All rights reserved.</p>
+        <p>&copy; 2024 J L McHenry. All rights reserved.</p>
     </footer>
 </body>
 </html>
