Past projects content added.

--- a/src/past-projects.html
+++ b/src/past-projects.html
@@ -20,11 +20,8 @@
         <center>
         <h2>Past Projects</h2>
         <p>Here are some of my past projects:</p>
-        <ul>
-            <li>Sandy Faces | Sandy Beach Community Centre</li>
-            <li>Kaleidoscope | Victorian Government & The Song Room</li>
-            <li>Tunnahan Faces | Independent Project at Tunnahan (Cape Schanck, VIC)</li>
-        </ul>
+           <li><a href="./sandy-faces.html">Sandy Faces</a></li> 
+            <li><a href="./kaleidoscope.html"> Kaleidoscope</a></li>
     </center>
     </div>
     <footer class="footer">
