--- a/src/sandy-faces.html
+++ b/src/sandy-faces.html
@@ -20,6 +20,7 @@
         <center>
         <h2>Sandy Faces - Sandringham Community Centre</h2>
         <p>Sandy Faces was a self-guided project I collaborated with the Sandringham Community Centre on. Their Young at Heart weekly historical group was collecting personal stories from each of the members for an online platform that would eventually be shared with loved ones.
+       <p><img src="./images/Sandy Faces Mock Up.png" width="500">
     </center>
     </div>
     <footer class="footer">
