Current projects content added.

--- a/src/current-projects.html
+++ b/src/current-projects.html
@@ -17,13 +17,14 @@
         <a href="showcase-gallery.html">Showcase Gallery</a>
     </nav>
     <div class="container">
+        <center>
         <h2>Current Projects</h2>
         <p>Here are some of my current projects:</p>
-        <ul>
-            <li>Project 1 - Description</li>
-            <li>Project 2 - Description</li>
-            <li>Project 3 - Description</li>
-        </ul>
+      
+            <li><a href="./braidwood.html"> 1 - Braidwood Spirit of Place</li></a>
+            <p><img src="./images/Braidwood Char.jpg" alt="charcoal drawing on plywood of a tree" height="500">
+            </p>
+      
     </div>
     <footer class="footer">
         <p>&copy; 2024 J L McHenry. All rights reserved.</p>
