--- a/src/sandy-faces.html
+++ b/src/sandy-faces.html
@@ -19,7 +19,7 @@
     <div class="container">
         <center>
         <h2>Sandy Faces - Sandringham Community Centre</h2>
-        <p>Sandy Faces was a self-guided project I collaborated with the Sandringham Community Centre on. Their Young at Heart weekly historical group was collecting personal stories from each of the members for an online platform that would eventually be shared with loved ones.
+        <p>Sandy Faces was a self-guided project I collaborated with the Sandringham Community Centre on. Their Young at Heart weekly historical group was collecting personal stories from each of the members for an online platform that would eventually be shared with loved ones. I wanted to create some visual assets that would help to bring their stories to life in a dramatic and exciting way so we held some portrait sessions at the centre and I took photos while they told their stories. It was a beauitful event and the images were exhibited at the Centre with a permanent copy of their favourite shot provided as a momento of the occasion.
        <p><img src="./images/Sandy Faces Mock Up.png" width="500">
     </center>
     </div>
