--- a/src/showcase-gallery.html
+++ b/src/showcase-gallery.html
@@ -19,9 +19,9 @@
     <div class="container">
         <h2>Showcase Gallery</h2>
         <div class="gallery">
-            <img src="images/image1.jpg" alt="Artwork 1">
-            <img src="images/image2.jpg" alt="Artwork 2">
-            <img src="images/image3.jpg" alt="Artwork 3">
+            <img src="./images/Braidwood Char.jpg" alt="Artwork 1">
+            <img src="./images/Sandy Faces Mock Up.png" alt="Artwork 2">
+            <img src="./images/Blackandwhitedownface.png" alt="Artwork 3">
             <!-- Add more images as needed -->
         </div>
     </div>
