New styling added to index page and current projects details updated.

--- a/src/current-projects.html
+++ b/src/current-projects.html
@@ -21,8 +21,8 @@
         <h2>Current Projects</h2>
         <p>Here are some of my current projects:</p>
       
-            <li><a href="./braidwood.html"> 1 - Braidwood Spirit of Place</li></a>
-            <p><img src="./images/Braidwood Char.jpg" alt="charcoal drawing on plywood of a tree" height="500">
+           <a href="./braidwood.html">Braidwood Spirit of Place</a> featuring a collection of printmaking, photography and painting.
+            <p><img src="images/Bright Clouds.png" height="500">
             </p>
       
     </div>
