--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,19 @@
         <h1>Wild Light Arts | Jessica Lee McHenry</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="past-projects.html">Past Projects</a>
-        <a href="current-projects.html">Current Projects</a>
-        <a href="showcase-gallery.html">Showcase Gallery</a>
+        <a href="index.html"># home</a>
+        <a href="past-projects.html"># past projects</a>
+        <a href="current-projects.html"># current projects</a>
+        <a href="showcase-gallery.html"># showcase gallery</a>
     </nav>
+    <!--
     <div class="container">
         <center>
         <h2>Welcome to My Portfolio</h2>
         <p>This is the home page of my artist portfolio. Explore my past and current projects and view my showcase gallery.</p>
         </center>
     </div>
+    -->
     <footer class="footer">
         <p>&copy; 2024 J L McHenry. All rights reserved.</p>
     </footer>
