--- a/src/braidwood.html
+++ b/src/braidwood.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Past Projects - Artist Portfolio</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/braidwoodstyle.css">
 </head>
 <body>
     <header>
-        <h1>Braidwood/h1>
+        <h1>Braidwood</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -20,11 +20,16 @@
         <center>
         <h2>Braidwood</h2>
         <p>Exploring my understanding of 'spirit of place' through landscape.
-       <p><img src="./images/Braidwood Char.jpg" width="500">
+            <p> These digital photographs form the start of my upcoming solo exhibition at the Braidwood Regional Arts Gallery. The images have been taken at sunset at local spots around town. They will form part of a larger collection of works featuring printmaking, acyrlic and oil painting. </p>
+        <p><img src="./images/Colourful Sky.png" width="500">
+        <p><img src="./images/Moody Clouds.png" width="500">
+        <p><img src="./images/Shadows on Colour.png" width="500"></p>
+        <p><img src="./images/Bright Clouds.png" width="500"></p>
     </center>
     </div>
-    <footer class="footer">
-        <p>&copy; 2024 J L McHenry. All rights reserved.</p>
-    </footer>
+
 </body>
+<footer class="footer">
+    <p>&copy; 2024 J L McHenry. All rights reserved.</p>
+</footer>
 </html>
