New styling added and pages updated.

--- a/src/current-projects.html
+++ b/src/current-projects.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Projects - Artist Portfolio</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/current-projectsstyle.css">
 </head>
 <body>
     <header>
-        <h1>Current Projects</h1>
+        <h1>current projects</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="past-projects.html">Past Projects</a>
-        <a href="current-projects.html">Current Projects</a>
-        <a href="showcase-gallery.html">Showcase Gallery</a>
+        <a href="index.html"># home</a>
+        <a href="past-projects.html"># past projects</a>
+        <a href="current-projects.html"># current projects</a>
+        <a href="showcase-gallery.html"># showcase gallery</a>
     </nav>
     <div class="container">
         <center>
