--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Wild Light Arts | Jessica Lee McHenry</h1>
+        <h1>wild light arts |</h1> Jessica Lee McHenry</h1>
     </header>
     <nav>
         <a href="index.html"># home</a>
