--- a/src/past-projects.html
+++ b/src/past-projects.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Past Projects - Artist Portfolio</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/pastprojectsstyle.css">
 </head>
 <body>
     <header>
-        <h1>Past Projects</h1>
+        <h1>past projects</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="past-projects.html">Past Projects</a>
-        <a href="current-projects.html">Current Projects</a>
-        <a href="showcase-gallery.html">Showcase Gallery</a>
+        <a href="index.html"># home</a>
+        <a href="past-projects.html"># past projects</a>
+        <a href="current-projects.html"># current projects</a>
+        <a href="showcase-gallery.html"># showcase gallery</a>
     </nav>
+    </body>
     <div class="container">
         <center>
-        <h2>Past Projects</h2>
-        <p>Here are some of my past projects:</p>
-           <li><a href="./sandy-faces.html">Sandy Faces</a></li> 
-            <li><a href="./kaleidoscope.html"> Kaleidoscope</a></li>
+           <a href="./sandy-faces.html">Sandy Faces</a>
+           <a href="./kaleidoscope.html"> Kaleidoscope</a>
     </center>
     </div>
     <footer class="footer">
