--- a/root/current-projects.html
+++ b/root/current-projects.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Projects - Artist Portfolio</title>
-    <link rel="stylesheet" href="./styles/pastprojectsstyle.css">
+    <title>Current Projects - Artist Portfolio</title>
+    <link rel="stylesheet" href="../src/styles/current-projectsstyle.css">
 </head>
 <body>
     <header>
-        <h1>past projects</h1>
+        <h1>current projects</h1>
     </header>
     <nav>
         <a href="index.html"># home</a>
@@ -16,12 +16,15 @@
         <a href="current-projects.html"># current projects</a>
         <a href="showcase-gallery.html"># showcase gallery</a>
     </nav>
-    </body>
     <div class="container">
         <center>
-           <a href="./sandy-faces.html">Sandy Faces</a>
-           <a href="./kaleidoscope.html"> Kaleidoscope</a>
-    </center>
+        <h2>Current Projects</h2>
+        <p>Here are some of my current projects:</p>
+      
+           <a href="./braidwood.html">Braidwood Spirit of Place</a> featuring a collection of printmaking, photography and painting.
+            <p><img src="images/Bright Clouds.png" height="500">
+            </p>
+      
     </div>
     <footer class="footer">
         <p>&copy; 2024 J L McHenry. All rights reserved.</p>
