--- a/root/past-projects.html
+++ b/root/past-projects.html
@@ -19,8 +19,8 @@
     </body>
     <div class="container">
         <center>
-           <a href="./sandy-faces.html">Sandy Faces</a>
-           <a href="./kaleidoscope.html"> Kaleidoscope</a>
+           <a href="../root/sandy-faces.html">Sandy Faces</a>
+           <a href="../root/kaleidoscope.html"> Kaleidoscope</a>
     </center>
     </div>
     <footer class="footer">
